# dav1d

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  NEWS  README.md  THANKS.md  meson.build  meson_options.txt
doc/: meson.build
examples/: dav1dplay.c  dp_renderer.h  dp_renderer_placebo.c  dp_renderer_placebo.h  dp_renderer_sdl.c  dp_renderer_sdl.h  meson.build
include/: meson.build  vcs_version.h.in
include/common/: attributes.h  bitdepth.h  dump.h  frame.h  intops.h  mem.h  validate.h
include/compat/msvc/: stdatomic.h
include/dav1d/: common.h  data.h  dav1d.h  headers.h  meson.build  picture.h  version.h.in
package/crossfiles/: aarch64-android.meson  arm-android.meson  loongarch64-linux.meson  wasm32.meson  wasm64.meson
snap/: snapcraft.yaml
src/: cdef.c  cdef.h  cdef_apply.c  cdef_apply_tmpl.c  cdef_tmpl.c  cdf.c  cdf.h  cpu.c  cpu.h  ctx.h  data.c  data.h  dav1d.rc.in  decode.c  decode.h  env.h  fg_apply.h  fg_apply_tmpl.c  film_grain.h  film_grain_tmpl.c  getbits.c  getbits.h  internal.h  intra_edge.c  intra_edge.h  ipred.c  ipred.h  ipred_prepare.c  ipred_prepare.h  ipred_prepare_tmpl.c  ipred_tmpl.c  itx.c  itx.h  itx_1d.c  itx_1d.h  itx_tmpl.c  levels.h  lf_apply.c  lf_apply_tmpl.c  lf_mask.c  (+46 more)
src/arm/: asm-offsets.h  asm.S  cdef_init_tmpl.c  cpu.c  film_grain_init_tmpl.c  ipred.h  ipred_init_tmpl.c  itx.h  itx_init_tmpl.c  loopfilter_init_tmpl.c  looprestoration.h  looprestoration_init_tmpl.c  mc_init.c  mc_init_tmpl.c  msac.h  refmvs.h
src/arm/32/: ipred.S  ipred16.S  itx.S  itx16.S  looprestoration_common.S  looprestoration_tmpl.S  mc.S  refmvs.S  util.S
src/arm/64/: film_grain.S  film_grain16.S  ipred.S  ipred16.S  itx.S  itx16.S  looprestoration_common.S  looprestoration_tmpl.S  mc.S  mc16.S  mc16_sve.S  mc_dotprod.S  msac.S  refmvs.S  util.S
src/ext/x86/: x86inc.asm
src/loongarch/: cdef.S  cdef.h  ipred.S  ipred.h  itx.S  itx.h  loongson_util.S  looprestoration.S  looprestoration.h  looprestoration_tmpl.c  mc.S  mc.h  msac.S  refmvs.S  refmvs.h
src/ppc/: cdef_init_tmpl.c  cdef_tmpl.c  itx.h  itx_tmpl.c  looprestoration_init_tmpl.c  mc.h  mc_tmpl.c  utils.h
src/riscv/: asm.S  cpu.c  ipred.h  itx.h  mc.h
src/riscv/64/: ipred.S  ipred16.S  itx.S  mc.S  mc16.S
src/win32/: thread.c
src/x86/: cdef.asm  cdef_avx2.asm  cdef_avx512.asm  cdef_init_tmpl.c  cpu.c  cpu.h  film_grain_init_tmpl.c  filmgrain_init_tmpl.c  ipred.h  ipred16_sse.asm  ipred_avx2.asm  ipred_avx512.asm  ipred_init.c  ipred_init_tmpl.c  ipred_sse.asm  itx.asm  itx.h  itx_avx2.asm  itx_init.c  itx_init_tmpl.c  itx_ssse3.asm  loopfilter_init.c  loopfilter_init_tmpl.c  looprestoration_init.c  looprestoration_init_tmpl.c  mc.asm  mc16_avx2.asm  mc16_avx512.asm  mc_avx2.asm  mc_avx512.asm  mc_init.c  mc_init_tmpl.c  mc_sse.asm  msac.h  msac_init.c  refmvs.asm  refmvs.h  refmvs_init.c
subprojects/: checkasm.wrap
tests/: dav1d_argon.bash  header_test.c.in  meson.build  seek_stress.c
tests/checkasm/: cdef.c  checkasm.c  checkasm.h  filmgrain.c  internal.h  ipred.c  itx.c  loopfilter.c  looprestoration.c  mc.c  msac.c
tests/checkasm/arm/: checkasm_32.S  checkasm_64.S
tests/checkasm/riscv/: checkasm_64.S
tests/checkasm/x86/: checkasm.asm
tests/libfuzzer/: alloc_fail.c  dav1d_fuzzer.c  main.c  meson.build
tools/: dav1d.c  dav1d_cli_parse.c  dav1d_cli_parse.h  dav1dplay.c  meson.build
tools/input/: annexb.c  input.c  input.h  ivf.c  parse.h  section5.c
tools/output/: md5.c  null.c  output.c  xxhash.c  y4m2.c  yuv.c
